# ultrasync

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  BROADCASTS_PROMPT.md  CHANGELOG.md  CLAUDE.md  LICENSE  LMDB_MIGRATION_PLAN.md  README.md  galaxybrain_spec.md  mcp_wrapper.sh  mise.toml  patterns.txt  pyproject.toml  pyrightconfig.json  saas-prd.md  test_embeddings.py
.claude/: settings.local.json
.galaxybrain/: tracker.db
.github/: release.yml
.github/scripts/: commit-msg-check.sh
.github/workflows/: build.yml  ci.yml  commit-msg.yml  lint.yml  publish.yml  release.yml  rust.yml  security.yml  test.yml
benchmarks/: __init__.py  cli.py  harness.py  metrics.py  reporter.py
benchmarks/cases/: debugging.yaml  discovery.yaml  understanding.yaml
benchmarks/config/: with-ultrasync.json
benchmarks/results/: .with-ultrasync-config.json
benchmarks/results/run-20251222-013416/baseline/: find_embedding_provider.json  find_mcp_search.json
benchmarks/results/run-20251222-013416/with-ultrasync/: find_embedding_provider.json  find_mcp_search.json
benchmarks/results/run-20251222-014224/baseline/: find_embedding_provider.json  find_mcp_search.json
benchmarks/results/run-20251222-014224/with-ultrasync/: find_embedding_provider.json  find_mcp_search.json  find_memory_system.json
benchmarks/results/run-20251222-123906/baseline/: find_embedding_provider.json  find_mcp_search.json
benchmarks/results/run-20251222-123906/with-ultrasync/: find_embedding_provider.json  find_mcp_search.json  find_memory_system.json
benchmarks/results/run-20251222-124535/baseline/: find_embedding_provider.json  find_mcp_search.json
benchmarks/results/run-20251222-124535/with-ultrasync/: find_embedding_provider.json  find_mcp_search.json  find_memory_system.json
benchmarks/results/run-20251222-125432/baseline/: find_embedding_provider.json  find_mcp_search.json  find_memory_system.json
benchmarks/results/run-20251222-125432/with-ultrasync/: find_embedding_provider.json  find_mcp_search.json  find_memory_system.json  find_pattern_matching.json
crates/galaxybrain_index/: Cargo.toml  pyproject.toml
crates/galaxybrain_index/src/: lib.rs
crates/ultrasync_index/: Cargo.toml  pyproject.toml
crates/ultrasync_index/src/: embeddings.rs  lib.rs
docs/: pyo3-freethreaded-gotchas.md  ultrasync_spec.md
docs/adr/: 001-multiplayer-sync-architecture.md
docs/prds/: 001-patternsets-memory-ontology.md  002-search-feedback-loop.md  003-app-ir-extraction.md  004-graph-memory.md  005-conventions.md  README.md  patternsets-memory-ontology.md  search-feedback-loop.md
galaxybrain_index/: Cargo.toml
galaxybrain_index/src/: lib.rs
src/: galaxybrain_index.pyi  ultrasync_index.pyi
src/galaxybrain/: __init__.py  _entry.py  call_graph.py  cli.py  console.py  embeddings.py  events.py  file_registry.py  file_scanner.py  git.py  hyperscan_search.py  index_builder.py  ir.py  keys.py  logging_config.py  mcp_server.py  patterns.py  router.py  search_learner.py  taxonomy.py  threads.py  transcript_watcher.py  voyager.py
src/galaxybrain/jit/: __init__.py  blob.py  cache.py  embed_queue.py  lmdb_tracker.py  manager.py  memory.py  progress.py  search.py  session_threads.py  tracker.py  vector_store.py
src/ultrasync/: __init__.py  _entry.py  call_graph.py  cli.py  embeddings.py  enrich.py  events.py  file_registry.py  file_scanner.py  hyperscan_search.py  index_builder.py  ir.py  keys.py  logging_config.py  mcp_server.py  patterns.py  router.py  search_learner.py  service_detector.py  sync_client.py  taxonomy.py  threads.py  transcript_watcher.py  voyager.py
src/ultrasync/cli/: __init__.py  _common.py
src/ultrasync/cli/commands/: anchors.py  callgraph.py  compact.py  conventions.py  delete.py  enrich.py  graph.py  grep.py  index.py  ir.py  keys.py  mcp.py  memory.py  patterns.py  query.py  repl.py  show.py  source.py  stack.py  stats.py  threads.py  voyager.py  warm.py
src/ultrasync/graph/: __init__.py  bootstrap.py  relations.py  storage.py
src/ultrasync/jit/: __init__.py  cache.py  convention_discovery.py  conventions.py  embed_queue.py  lexical.py  lmdb_tracker.py  manager.py  memory.py  memory_extractor.py  progress.py  search.py  session_threads.py  vector_store.py
src/ultrasync/schema/: ir.schema.json
src/ultrasync/stack/: __init__.py  detector.py  feature_detector.py  lockfile_parser.py  manifest_parser.py  registry.py  runtime_detector.py
src/ultrasync_mcp/: __init__.py  console.py  enrich.py  logging_config.py  mcp_server.py  paths.py  sync_client.py  transcript_watcher.py  voyager.py
src/ultrasync_mcp/cli/: _common.py
src/ultrasync_mcp/cli/commands/: anchors.py  callgraph.py  compact.py  conventions.py  delete.py  enrich.py  graph.py  grep.py  index.py  ir.py  keys.py  mcp.py  memory.py  patterns.py  repl.py  show.py  source.py  stats.py  threads.py  voyager.py  warm.py
src/ultrasync_mcp/graph/: storage.py
src/ultrasync_mcp/jit/: blob.py  lexical.py  lmdb_tracker.py  manager.py  memory.py  progress.py  secrets.py  vector_store.py
src/ultrasync_mcp/server/: __init__.py  config.py  models.py  state.py  utils.py
src/ultrasync_mcp/tools/: __init__.py  conventions.py  graph.py  indexing.py  ir.py  memory.py  patterns.py  search.py  sessions.py  sync.py  watcher.py
tests/: test_call_graph.py  test_conventions.py  test_events.py  test_file_scanner.py  test_git.py  test_graph.py  test_hyperscan_index.py  test_index_builder.py  test_ir.py  test_jit_blob.py  test_jit_cache.py  test_jit_embed_queue.py  test_jit_manager.py  test_jit_tracker.py  test_keys.py  test_lexical.py  test_memory_extractor.py  test_memory_patterns.py  test_mutable_global_index.py  test_recency.py  test_regex_safety.py  test_search_learner.py  test_secrets.py  test_taxonomy.py  test_transcript_watcher.py
