[project]
name = "ultrasync"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "David Gidwani", email = "david.gidwani@gmail.com" }]
dependencies = [
  "click>=8.1",
  "ultrasync-index",
  "hyperscan>=0.8.0",
  "lmdb>=1.5.1",
  "mcp>=1.2.0",
  "msgpack>=1.1.0",
  "numpy>=1.24",
  "sentence-transformers>=3",
  "structlog>=24.0",
]

[project.scripts]
ultrasync = "ultrasync._entry:main"

[project.optional-dependencies]
cli = [
  "rich>=13.0",
  "textual>=0.50",
]

[dependency-groups]
dev = [
  "ipython>=8.37.0",
  "maturin>=1.5",
  "pytest>=9.0.1",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.14.8",
  "tombi>=0.7.7",
]
docs = [
  "zensical>=0.0.11",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tool.pytest]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "TID252"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]  # allow imports after warnings filter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.uv.sources]
ultrasync-index = { path = "crates/ultrasync_index", editable = true }
