[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "galaxybrain_index"
version = "0.1.0"
requires-python = ">=3.14"
description = "Rust-backed mmapped and thread-local index for Galaxybrain"
authors = [{ name = "David Gidwani", email = "david.gidwani@gmail.com" }]

[tool.maturin]
bindings = "pyo3"
