[package]
name = "ultrasync_index"
version = "0.1.0"
edition = "2021"

[lib]
name = "ultrasync_index"
crate-type = ["cdylib"]

[dependencies]
memmap2 = "0.9"
pyo3 = { version = "0.27", features = ["extension-module", "py-clone"] }
rayon = "1.10"

# tree-sitter core and language grammars
tree-sitter = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-rust = { version = "0.23", optional = true }

[features]
default = ["scanner"]
scanner = ["tree-sitter", "tree-sitter-python", "tree-sitter-typescript", "tree-sitter-rust"]

[dev-dependencies]
tempfile = "3"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
